Prevent horizontal scroll

--- a/frontend/src/pages/WorkspaceSettings/SourcemapSettings/SourcemapSettings.module.scss
+++ b/frontend/src/pages/WorkspaceSettings/SourcemapSettings/SourcemapSettings.module.scss
@@ -21,6 +21,11 @@
     }
 }
 
+.listRow {
+    display: block;
+    width: 100%;
+}
+
 .select {
     margin-bottom: var(--size-medium);
     width: 100%;
